--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
 }
 
 .chamada {
-    background: rgba(194, 41, 15, 0.863);
+    background: rgb(243, 65, 20);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
