--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
     margin-right: 5%;
 }
 
-h1{
+h1 {
     font-size: 40px;
 }
 
@@ -35,7 +35,7 @@ p {
 
 .categoria-videos {
     display: flex;
-    overflow: auto;
+    overflow-x: auto;
     gap: 10px;
 }
 
@@ -56,5 +56,5 @@ p {
 }
 
 .categoria h2 {
-    color: rgb(228, 33, 8)
+    color: rgb(228, 33, 8);
 }
