--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
 }
 
 .chamada {
-    background: rgb(243, 65, 20);
+    background:rgb(243, 65, 20);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -25,8 +25,8 @@ header {
     margin-right: 5%;
 }
 
-h1 {
-    font-size: 40px;
+h1 { background: rgb(243, 65, 20);
+    font-size: 40px:
 }
 
 p {
